# ExamenTema2

./: CMakeLists.txt  README.md  asistencia.cpp  asistencia.h  estudiante.cpp  estudiante.h  estudiantec.c  estudiantec.h  main.c  main.cpp
